[package]
name = "virt-arena"
authors = ["Mateusz S. Szczygieł <41059082+matszczygiel@users.noreply.github.com>"]
description = "A virtual memory bump allocator."
repository = "https://github.com/matszczygiel/virt-arena"
license = "MIT"
categories = ["memory-management"]
version = "0.3.0"
edition = "2021"

[target.'cfg(unix)'.dependencies]
libc = "0.2.158"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_System_Memory"] }
